--- a/res/layout/contacts.xml
+++ b/res/layout/contacts.xml
@@ -1,47 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
-        android:gravity="left|center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingBottom="5px"
-        android:paddingTop="5px" 
-        android:paddingLeft="5px">
-<TextView android:id="@+id/name"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:gravity="center_vertical"
-    android:textSize="16dip"
-    android:typeface="sans"
-    android:shadowColor = "#FFFFFF"/>
-<TextView android:id="@+id/phone_number"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:gravity="center_vertical"
-    android:textSize="16dip"
-    android:typeface="sans"
-    android:shadowColor = "#FFFFFF"/>
-<TextView android:id="@+id/incoming"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:gravity="center_vertical"
-    android:textSize="16dip"
-    android:typeface="sans"
-    android:shadowColor = "#FFFFFF"/>
-<TextView android:id="@+id/outgoind"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:gravity="center_vertical"
-    android:textSize="16dip"
-    android:typeface="sans"
-    android:shadowColor = "#FFFFFF"/>
-<TextView android:id="@+id/missed"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:gravity="center_vertical"
-    android:textSize="16dip"
-    android:typeface="sans"
-    android:shadowColor = "#FFFFFF"/>
-        
+	android:orientation="vertical" android:gravity="left|center"
+	android:layout_width="wrap_content" android:layout_height="wrap_content"
+	android:paddingBottom="5px" android:paddingTop="5px"
+	android:paddingLeft="5px">
+
+	<TextView android:id="@+id/image" android:layout_width="wrap_content"
+		android:layout_height="wrap_content" android:gravity="center_vertical"
+		android:textSize="16dip" android:typeface="sans" android:shadowColor="#FFFFFF" />
+
+	<TextView android:id="@+id/name" android:layout_width="wrap_content"
+		android:layout_height="wrap_content" android:gravity="center_vertical"
+		android:textSize="16dip" android:typeface="sans" android:shadowColor="#FFFFFF" />
+	<TextView android:id="@+id/phone_number" android:layout_width="wrap_content"
+		android:layout_height="wrap_content" android:gravity="center_vertical"
+		android:textSize="16dip" android:typeface="sans" android:shadowColor="#FFFFFF" />
+
+	<TextView android:id="@+id/incoming" android:layout_width="wrap_content"
+		android:layout_height="wrap_content" android:gravity="center_vertical"
+		android:textSize="16dip" android:typeface="sans" android:shadowColor="#FFFFFF" />
+	<TextView android:id="@+id/outgoing" android:layout_width="wrap_content"
+		android:layout_height="wrap_content" android:gravity="center_vertical"
+		android:textSize="16dip" android:typeface="sans" android:shadowColor="#FFFFFF" />
+	<TextView android:id="@+id/missed" android:layout_width="wrap_content"
+		android:layout_height="wrap_content" android:gravity="center_vertical"
+		android:textSize="16dip" android:typeface="sans" android:shadowColor="#FFFFFF" />
+	<TextView android:id="@+id/inbox" android:layout_width="wrap_content"
+		android:layout_height="wrap_content" android:gravity="center_vertical"
+		android:textSize="16dip" android:typeface="sans" android:shadowColor="#FFFFFF" />
+	<TextView android:id="@+id/send" android:layout_width="wrap_content"
+		android:layout_height="wrap_content" android:gravity="center_vertical"
+		android:textSize="16dip" android:typeface="sans" android:shadowColor="#FFFFFF" />
 </LinearLayout>
 
