--- a/res/layout/contacts.xml
+++ b/res/layout/contacts.xml
@@ -6,83 +6,83 @@
 	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 		android:layout_width="wrap_content" android:layout_height="wrap_content">
 		<ImageView android:id="@+id/image" android:layout_width="wrap_content"
-			android:layout_height="fill_parent"  />
+			android:layout_height="fill_parent" android:scaleType="fitStart" />
 		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-			android:orientation="vertical" android:gravity="left|center"
+			android:orientation="vertical" 
 			android:layout_width="wrap_content" android:layout_height="wrap_content">
 
 			<TextView android:id="@+id/name" android:layout_width="wrap_content"
-				android:layout_height="wrap_content" android:gravity="center_vertical"
+				android:layout_height="wrap_content" 
 				android:textSize="14dip" android:typeface="sans"
 				android:shadowColor="#FFFFFF" />
 			<TextView android:id="@+id/phone_number"
 				android:layout_width="wrap_content" android:layout_height="wrap_content"
-				android:gravity="center_vertical" android:textSize="14dip"
+				android:textSize="14dip"
 				android:typeface="sans" android:shadowColor="#FFFFFF" />
 		</LinearLayout>
 	</LinearLayout>
 
 	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-		android:gravity="left|center" android:layout_width="wrap_content"
+		 android:layout_width="wrap_content"
 		android:layout_height="wrap_content">
 		<ImageView android:id="@+id/incomingImage"
 			android:layout_width="wrap_content" android:layout_height="fill_parent"
-			 android:src="@drawable/incoming" />
+			 android:src="@drawable/incoming" android:scaleType="fitStart"/>
 		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-			android:orientation="vertical" android:gravity="left|center"
+			android:orientation="vertical" 
 			android:layout_width="wrap_content" android:layout_height="wrap_content">
 			<TextView android:id="@+id/incoming" android:layout_width="wrap_content"
-				android:layout_height="wrap_content" android:gravity="center_vertical"
+				android:layout_height="wrap_content" 
 				android:textSize="14dip" android:typeface="sans"
 				android:shadowColor="#FFFFFF" />
 		</LinearLayout>
 	</LinearLayout>
 
 	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-		android:gravity="left|center" android:layout_width="wrap_content"
+		 android:layout_width="wrap_content"
 		android:layout_height="wrap_content">
 
 		<ImageView android:id="@+id/outgoingImage"
 			android:layout_width="wrap_content" android:layout_height="fill_parent"
-			 android:src="@drawable/outgoing" />
+			 android:src="@drawable/outgoing" android:scaleType="fitStart"/>
 		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-			android:orientation="vertical" android:gravity="left|center"
+			android:orientation="vertical" 
 			android:layout_width="wrap_content" android:layout_height="wrap_content">
 			<TextView android:id="@+id/outgoing" android:layout_width="wrap_content"
-				android:layout_height="wrap_content" android:gravity="center_vertical"
+				android:layout_height="wrap_content" 
 				android:textSize="14dip" android:typeface="sans"
 				android:shadowColor="#FFFFFF" />
 		</LinearLayout>
 	</LinearLayout>
 
 	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-		android:gravity="left|center" android:layout_width="wrap_content"
+		 android:layout_width="wrap_content"
 		android:layout_height="wrap_content">
 
 		<ImageView android:id="@+id/missedImage"
 			android:layout_width="wrap_content" android:layout_height="fill_parent"
-			 android:src="@drawable/missed" />
+			 android:src="@drawable/missed" android:scaleType="fitStart"/>
 		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-			android:orientation="vertical" android:gravity="left|center"
+			android:orientation="vertical" 
 			android:layout_width="wrap_content" android:layout_height="wrap_content">
 			<TextView android:id="@+id/missed" android:layout_width="wrap_content"
-				android:layout_height="wrap_content" android:gravity="center_vertical"
+				android:layout_height="wrap_content" 
 				android:textSize="14dip" android:typeface="sans"
 				android:shadowColor="#FFFFFF" />
 		</LinearLayout>
 	</LinearLayout>
 	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-		android:gravity="left|center" android:layout_width="wrap_content"
+		 android:layout_width="wrap_content"
 		android:layout_height="wrap_content">
 
 		<ImageView android:id="@+id/inboxImage"
 			android:layout_width="wrap_content" android:layout_height="fill_parent"
-			 android:src="@drawable/message" />
+			 android:src="@drawable/message" android:scaleType="fitStart" />
 		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-			android:orientation="vertical" android:gravity="left|center"
+			android:orientation="vertical" 
 			android:layout_width="wrap_content" android:layout_height="wrap_content">
 			<TextView android:id="@+id/inbox" android:layout_width="wrap_content"
-				android:layout_height="wrap_content" android:gravity="center_vertical"
+				android:layout_height="wrap_content" 
 				android:textSize="14dip" android:typeface="sans"
 				android:shadowColor="#FFFFFF" />
 		</LinearLayout>
@@ -93,12 +93,12 @@
 		android:layout_height="wrap_content">
 		<ImageView android:id="@+id/inboxImage"
 			android:layout_width="fill_parent" android:layout_height="fill_parent"
-			 android:src="@drawable/message" />
+			 android:src="@drawable/message" android:scaleType="fitStart" />
 		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-			android:orientation="vertical" android:gravity="left|center"
+			android:orientation="vertical" 
 			android:layout_width="wrap_content" android:layout_height="wrap_content">
 			<TextView android:id="@+id/send" android:layout_width="wrap_content"
-				android:layout_height="wrap_content" android:gravity="center_vertical"
+				android:layout_height="wrap_content" 
 				android:textSize="14dip" android:typeface="sans"
 				android:shadowColor="#FFFFFF" />
 		</LinearLayout>
