--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -8,6 +8,7 @@
 		android:orientation="vertical">
 		<AutoCompleteTextView android:id="@+id/autocomplete_contact"
 			android:layout_width="fill_parent" android:layout_height="wrap_content"
+			android:singleLine="true"
 			android:layout_marginLeft="5dp" />
 	</LinearLayout>
 </ScrollView>
